# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml  test.rest
.github/workflow/: general.yml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml
migrations/: 20241211143934_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: helath_check.rs
